20042
This bug only exists with the flag -Yrepl-class-based:
{code}
#  scala -Yrepl-class-based
Welcome to Scala version 2.11.7 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_60).
Type in expressions to have them evaluated.
Type :help for more information.

scala> :pa
// Entering paste mode (ctrl-D to finish)

case class Data(i: Int)
val d = Data(1)

// Exiting paste mode, now interpreting.

defined class Data
d: Data = Data(1)

scala> val d2: Data = d
<console>:14: error: type mismatch;
 found   : Data
 required: Data
       val d2: Data = d
                      ^

scala>
{code}
